pkg/i2gw/implementations/kgateway/testing/testdata/output/basic_auth.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
  - hostname: app1.example.org
    name: app1-example-org-http
    port: 80
    protocol: HTTP
  - hostname: app2.example.org
    name: app2-example-org-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-basic-auth-file-default-app1-example-org
  namespace: default
spec:
  hostnames:
  - app1.example.org
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: app1
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-basic-auth-file-explicit-app2-example-org
  namespace: default
spec:
  hostnames:
  - app2.example.org
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: app2
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: ingress-basic-auth-file-default
  namespace: default
spec:
  basicAuth:
    secretRef:
      key: auth
      name: basic-auth-secret
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: ingress-basic-auth-file-default-app1-example-org
status:
  ancestors: null
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: ingress-basic-auth-file-explicit
  namespace: default
spec:
  basicAuth:
    secretRef:
      key: auth
      name: basic-auth-secret
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: ingress-basic-auth-file-explicit-app2-example-org
status:
  ancestors: null
