pkg/i2gw/implementations/kgateway/testing/testdata/output/cors.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
    - hostname: myservicea.foo.org
      name: myservicea-foo-org-http
      port: 80
      protocol: HTTP
    - hostname: myserviceb.foo.org
      name: myserviceb-foo-org-http
      port: 80
      protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-myservicea1-myservicea-foo-org
  namespace: default
spec:
  hostnames:
    - myservicea.foo.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - filters:
            - extensionRef:
                group: gateway.kgateway.dev
                kind: TrafficPolicy
                name: ingress-myservicea1
              type: ExtensionRef
          name: myservicea
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
    - backendRefs:
        - filters:
            - extensionRef:
                group: gateway.kgateway.dev
                kind: TrafficPolicy
                name: ingress-myservicea2
              type: ExtensionRef
          name: myservicea
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /2
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-myserviceb-myserviceb-foo-org
  namespace: default
spec:
  hostnames:
    - myserviceb.foo.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: myserviceb
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
status:
  parents: []
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: ingress-myservicea1
  namespace: default
spec:
  cors:
    allowCredentials: false
    allowHeaders:
      - X-Requested-With
      - Content-Type
    allowMethods:
      - GET
      - POST
      - OPTIONS
    allowOrigins:
      - https://example.com
      - https://another.com
    exposeHeaders:
      - X-Expose-One
      - X-Expose-Two
    maxAge: 600
status:
  ancestors: null
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: ingress-myservicea2
  namespace: default
spec:
  cors:
    allowOrigins:
      - https://example.com
      - https://another.com
status:
  ancestors: null
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: ingress-myserviceb
  namespace: default
spec:
  cors:
    allowOrigins:
      - https://example.com
      - https://another.com
    exposeHeaders:
      - '*'
      - X-CustomResponseHeader
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: ingress-myserviceb-myserviceb-foo-org
status:
  ancestors: null
