pkg/i2gw/implementations/kgateway/testing/testdata/output/rewrite_target.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
    - hostname: myservicea.foo.org
      name: myservicea-foo-org-http
      port: 80
      protocol: HTTP
    - hostname: myserviceb.foo.org
      name: myserviceb-foo-org-http
      port: 80
      protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-myservicea1-myservicea-foo-org
  namespace: default
spec:
  hostnames:
    - myservicea.foo.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - filters:
            - extensionRef:
                group: gateway.kgateway.dev
                kind: TrafficPolicy
                name: ingress-myservicea1-rewrite-0
              type: ExtensionRef
          name: myservicea
          port: 80
      matches:
        - path:
            type: RegularExpression
            value: ^/
    - backendRefs:
        - name: myservicea
          port: 80
      matches:
        - path:
            type: RegularExpression
            value: ^/2
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-myserviceb-myserviceb-foo-org
  namespace: default
spec:
  hostnames:
    - myserviceb.foo.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: myserviceb
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
status:
  parents: []
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: ingress-myservicea1-rewrite-0
  namespace: default
spec:
  urlRewrite:
    pathRegex:
      pattern: ^/
      substitution: /rewritten
status:
  ancestors: null
